--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      http-equiv="Permissions-Policy"
-      content="interest-cohort=(), user-id=()"
-    />
-    <title>ReactRTC</title>
-    <script defer src="./dist/bundle.js"></script>
-  </head>
 
-  <body>
-    <div id="root"></div>
-  </body>
+<head>
+  <link rel="apple-touch-icon" sizes="180x180" href="./src/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./src/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./src/favicons/favicon-16x16.png">
+  <link rel="manifest" href="./src/favicons/site.webmanifest">
+  <link rel="mask-icon" href="./src/favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="./src/favicons/favicon.ico">
+  <meta name="msapplication-TileColor" content="#603cba">
+  <meta name="msapplication-config" content="./src/favicons/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ReactRTC</title>
+  <script defer src="./dist/bundle.js"></script>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
