--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ReactRTC</title>
-  <script defer src="./dist/bundle.1e6068a61227e2a27e41.js"></script>
+  <script defer src="./dist/bundle.js"></script>
 </head>
 
 <body>
